--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,5 @@ dependencies {
   androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
   implementation 'com.android.support:design:27.1.1'
   implementation 'com.squareup.retrofit2:retrofit-mock:2.4.0'
+  implementation 'com.squareup.picasso:picasso:2.71828'
 }
