--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+  repositories {
+    maven { url "https://jitpack.io" }
+  }
+
+  testOptions {
+    unitTests.returnDefaultValues = true
+  }
+
 }
 
 dependencies {
@@ -30,6 +38,8 @@ dependencies {
   implementation 'com.google.code.gson:gson:2.8.0'
   implementation 'com.squareup.retrofit2:retrofit:2.4.0'
   implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+  implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+
   implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
   implementation 'com.squareup.okhttp3:okhttp:3.10.0'
   implementation 'com.jakewharton:butterknife:8.8.1'
@@ -41,4 +51,15 @@ dependencies {
   implementation 'com.android.support:design:27.1.1'
   implementation 'com.squareup.retrofit2:retrofit-mock:2.4.0'
   implementation 'com.squareup.picasso:picasso:2.71828'
+  implementation 'com.github.florent37:fiftyshadesof:1.0.0'
+  implementation 'com.android.support:cardview-v7:27.1.1'
+  implementation 'android.arch.persistence.room:runtime:1.1.1-rc1'
+  annotationProcessor 'android.arch.persistence.room:compiler:1.1.1-rc1'
+  implementation 'com.github.sachinvarma:EasyLocation:1.0.0'
+  implementation 'com.google.android.gms:play-services-maps:12.0.1'
+  implementation 'com.google.android.gms:play-services-location:12.0.1'
+  implementation 'com.google.android.gms:play-services-places:12.0.1'
+  implementation "io.reactivex.rxjava2:rxjava:2.1.14"
+  implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+  implementation 'org.greenrobot:eventbus:3.1.1'
 }
