--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.sachinvarma.betterdoctor">
 
   <uses-permission android:name="android.permission.INTERNET"/>
+  <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+  <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 
   <application
       android:allowBackup="true"
@@ -18,6 +20,14 @@
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
     </activity>
+    <activity android:name=".ui.searchdoctor.SearchDoctorActivity"/>
+    <activity android:name=".ui.doctordetails.DoctorDetailsActivity"/>
+
+
+    <meta-data
+        android:name="com.google.android.geo.API_KEY"
+        android:value="AIzaSyAw3yOz4Eeq-fTRrAdSY10QZdDRr4YxDjM"/>
+
   </application>
 
 </manifest>
