--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,32 +38,28 @@ dependencies {
   implementation fileTree(include: ['*.jar'], dir: 'libs')
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
   implementation "com.android.support:appcompat-v7:$supportVersion"
-  implementation 'com.android.support.constraint:constraint-layout:1.1.0'
-  implementation 'com.google.code.gson:gson:2.8.0'
-  implementation 'com.squareup.retrofit2:retrofit:2.4.0'
-  implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
-  implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+  implementation "com.android.support.constraint:constraint-layout:$constraintLayoutVersion"
+  implementation "com.google.code.gson:gson:$gsonVersion"
+  implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
+  implementation "com.squareup.retrofit2:converter-gson:$converterGsonVersion"
+  implementation "com.squareup.retrofit2:adapter-rxjava2:$adapterRxjava2Version"
 
-  implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
-  implementation 'com.squareup.okhttp3:okhttp:3.10.0'
-  implementation 'com.jakewharton:butterknife:8.8.1'
-  testImplementation 'org.mockito:mockito-core:2.16.0'
-  annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-  testImplementation 'junit:junit:4.12'
-  androidTestImplementation 'com.android.support.test:runner:1.0.2'
-  androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-  implementation 'com.android.support:design:27.1.1'
-  implementation 'com.squareup.retrofit2:retrofit-mock:2.4.0'
-  implementation 'com.squareup.picasso:picasso:2.71828'
-  implementation 'com.github.florent37:fiftyshadesof:1.0.0'
-  implementation 'com.android.support:cardview-v7:27.1.1'
-  implementation 'android.arch.persistence.room:runtime:1.1.1-rc1'
-  annotationProcessor 'android.arch.persistence.room:compiler:1.1.1-rc1'
-  implementation 'com.github.sachinvarma:EasyLocation:1.0.0'
-  implementation 'com.google.android.gms:play-services-maps:12.0.1'
-  implementation 'com.google.android.gms:play-services-location:12.0.1'
-  implementation 'com.google.android.gms:play-services-places:12.0.1'
-  implementation "io.reactivex.rxjava2:rxjava:2.1.14"
-  implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
-  implementation 'org.greenrobot:eventbus:3.1.1'
+  implementation "com.squareup.okhttp3:logging-interceptor:$loggingInterceptorVersion"
+  implementation "com.squareup.okhttp3:okhttp:$okHttpVersion"
+  implementation "com.jakewharton:butterknife:$butterknifeVersion"
+  testImplementation "org.mockito:mockito-core:$mockitoCoreVersion"
+  annotationProcessor "com.jakewharton:butterknife-compiler:$butterknifeCompilerVersion"
+  testImplementation "junit:junit:$junitVersion"
+  androidTestImplementation "com.android.support.test:runner:$testRunnerVersion"
+  androidTestImplementation "com.android.support.test.espresso:espresso-core:$espressoCoreVersion"
+  implementation "com.android.support:design:$supportVersion"
+  implementation "com.squareup.retrofit2:retrofit-mock:$retrofitVersion"
+  implementation "com.squareup.picasso:picasso:$picassoVersion"
+  implementation "com.github.florent37:fiftyshadesof:$fiftyshadesofVersion"
+  implementation "com.android.support:cardview-v7:$supportVersion"
+  implementation "com.google.android.gms:play-services-maps:$playServicesVersion"
+  implementation "com.google.android.gms:play-services-location:$playServicesVersion"
+  implementation "com.google.android.gms:play-services-places:$playServicesVersion"
+  implementation "io.reactivex.rxjava2:rxjava:$rxjavaVersion"
+  implementation "io.reactivex.rxjava2:rxandroid:$rxandroidVersion"
 }
